--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -1,113 +1,5 @@
-absl-py==2.1.0
-argcomplete==3.5.3
-astunparse==1.6.3
-bcc==0.29.1
-Beaker==1.12.1
-beautifulsoup4==4.12.3
-blinker==1.9.0
-blivet==3.10.0
-blivet-gui==2.6.0
-boto3==1.36.22
-botocore==1.36.22
-Brlapi==0.8.5
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==41.0.7
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-distro==1.9.0
-dnf==4.22.0
-fedora-third-party==0.10
-file-magic==0.4.0
-Flask==3.1.0
-Flask-Cors==5.0.0
-flatbuffers==25.2.10
-fros==1.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.70.0
-h5py==3.12.1
-humanize==3.13.1
-idna==3.7
-iso639==0.1.4
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jmespath==1.0.1
-keras==3.8.0
-langtable==0.0.68
-libclang==18.1.1
-libcomps==0.1.20
-libdnf==0.73.4
-louis==3.28.0
-lxml==5.1.0
-Mako==1.2.3
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-ml-dtypes==0.4.1
-namex==0.0.8
-netaddr==0.10.1
-nftables==0.1
-numpy==2.0.2
-olefile==0.47
-opt_einsum==3.4.0
-optree==0.14.0
-packaging==23.2
-Paste==3.7.1
-pexpect==4.9.0
-pid==2.2.3
-pillow==10.3.0
-ply==3.11
-productmd==1.43
-protobuf==5.29.3
-ptyprocess==0.7.0
-pwquality==1.4.5
-pycairo==1.25.1
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.4
-pyenchant==3.2.2
-Pygments==2.19.1
-PyGObject==3.48.2
-pykickstart==3.52
-pyOpenSSL==23.2.0
-pyparted==3.13.0
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.2
-python-meh==0.51
-python-pam==2.0.2
-pyudev==0.24.1
-pyxdg==0.27
-PyYAML==6.0.1
-regex==2024.9.11
-requests==2.31.0
-requests-file==2.0.0
-requests-ftp==0.3.1
-rich==13.9.4
-rpm==4.19.1.1
-s3transfer==0.11.2
-selinux @ file:///builddir/build/BUILD/libselinux-3.7/src
-sepolicy @ file:///builddir/build/BUILD/selinux-3.7/python/sepolicy
-setools==4.5.1
-setuptools==69.0.3
-simpleaudio==1.0.4
-simpleline==1.9.0
-six==1.16.0
-sos==4.7.2
-soupsieve==2.5
-systemd-python==235
-Tempita==0.5.2
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-termcolor==2.5.0
-typing_extensions==4.12.2
-urllib3==1.26.20
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.2
-xkbregistry==0.3
+flask
+flask-cors
+tensorflow==2.15.0  # Match your local TensorFlow version if different
+numpy
+pillow
